@@ -1,3 +1,10 @@
+2013-10-23 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: fixed the get events filtered by the
+	group in the parameters.
+	
+	MERGED FROM THE TRUNK
+
 2013-10-21 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_api.php: applied the path from
